<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layoutLinear"
        android:layout_width="407dp"
        android:layout_height="577dp"
        android:gravity="right"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnDeslogar"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:text="@string/Deslogar"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Menu" />

        <Button
            android:id="@+id/btnReceitas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Receitas" />

        <Button
            android:id="@+id/btnAddReceita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CadReceita" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>